# LobsterGameEngine

./: CMakeLists.txt  Components.h  Systems.cpp  Systems.h  centralview.cpp  centralview.h  component.cpp  component.h  componentinfowidget.cpp  componentinfowidget.h  componentwidget.cpp  componentwidget.h  editor.cpp  editor.h  editortool.cpp  editortool.h  editortoolswidget.cpp  editortoolswidget.h  editorwidget.cpp  editorwidget.h  game.cpp  game.h  gameloop.cpp  gameloop.h  gamemap.cpp  gamemap.h  gameobject.cpp  gameobject.h  gameobjectinfowidget.cpp  gameobjectinfowidget.h  gameobjectlayer.cpp  gameobjectlayer.h  gameobjectpixmapitem.cpp  gameobjectpixmapitem.h  gameobjectstates.cpp  gameobjectstates.h  gameobjectstreewidget.cpp  gameobjectstreewidget.h  gamewindow.cpp  gamewindow.h  (+40 more)
sprites/icons/: object.png-autosave.kra
